--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,4 +8,11 @@ pipeline {
             }
         }
     }
+    stages {
+        stage('Test') {
+            steps {
+                sh 'py.test --junit-xml test-reports/results.xml sources/test_calc.py'
+            }
+        }
+    }
 }
