--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,6 +13,11 @@ pipeline {
             steps {
                 sh 'py.test --junit-xml test-reports/results.xml sources/test_calc.py'
             }
+            post {
+                always {
+                    junit 'test-reports/results.xml'
+                }
+            }
         }
     }
 }
